<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dooit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="welcome_description">Write what you need \n to do. Everyday</string>
    <string name="btn_continue">Continue</string>
    <string name="ic_search">ic_search</string>
    <string name="todo_main">todo_main</string>
    <string name="create_todo" tools:ignore="TypographyEllipsis">Create your first to-do list...</string>
    <string name="new_list">New List</string>
    <string name="no_pinned_list_yet" tools:ignore="TypographyEllipsis">Ooops! No pinned list yet...</string>
    <string name="icon_date">icon date</string>
    <string name="ic_navigation_back">ic_navigation_back</string>
    <string name="pin">Pin</string>
    <string name="pinned">Pinned</string>
    <string name="pin_icon">pin icon</string>
    <string name="icon_save_tick">icon save tick</string>
    <string name="title_hint">Title</string>
</resources>