<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".ui.WelcomePageFragment">

    <ImageView
        android:layout_width="67dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="194dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/logo_vector" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="42dp"
        android:fontFamily="@font/graphik_semi_bold"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="39.08sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/graphik_medium"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18.98sp" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="199dp"
        android:layout_height="53dp"
        android:layout_gravity="center"
        android:layout_marginStart="152dp"
        android:layout_marginTop="109.55dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/graphik_medium"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/btn_continue"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>