<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_empty_list"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/todo_main"
        android:scaleType="fitCenter"
        android:src="@drawable/pinned_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/graphik_semi_bold"
        android:text="@string/no_pinned_list_yet"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_empty_list" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_new_pinned_task"
        style="@style/ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="32dp"
        android:text="@string/new_list"
        app:layout_constraintEnd_toEndOf="@id/txt_message"
        app:layout_constraintStart_toStartOf="@id/txt_message"
        app:layout_constraintTop_toBottomOf="@+id/txt_message" />

</androidx.constraintlayout.widget.ConstraintLayout>