<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.AddTaskActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ic_navigation_back"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/ic_navigation_back"
            android:src="@drawable/ic_navigation_back" />

        <ImageButton
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_gravity="end"
            android:layout_marginEnd="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/icon_save_tick"
            android:src="@drawable/ic_save_tick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_pinned_bg"
            android:fontFamily="@font/graphik_medium"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="7dp"
            android:paddingEnd="16dp"
            android:paddingBottom="7dp"
            android:text="@string/pin"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </Toolbar>

</androidx.constraintlayout.widget.ConstraintLayout>